...
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="visible"
                    android:indeterminateTint="@color/ProgressBarColor"/>

                <ImageView
                    android:id="@+id/recette_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/recette_image_description" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/recette_nom_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|top"
                android:text="@string/recette_nom"
                android:textAppearance="@style/recette_nom" />

            <TextView
                android:id="@+id/recette_text_view_nombre_ingredients_manquants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="top"
                android:text="@string/recette_nombre_ingredients_manquants"
                android:textAppearance="@style/recette_nombre_ingredients_manquants" />
...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/recette_Button_portion_minus"
                    style="@style/recette_portion_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/recette_button_portion_minus" />

                <TextView
                    android:id="@+id/recette_text_view_portion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/recette_portion"
                    android:textAppearance="@style/recette_portion" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/recette_Button_portion_plus"
                    style="@style/recette_portion_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/recette_button_portion_plus" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recette_ingredients_dropdownButton"
                style="@style/recette_nombre_ingredients_manquants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/recette_dropdownbutton_notclicked_background"
                android:gravity="start|center_vertical"
                android:text="@string/recette_ingredients_dropdownButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recette_ingredients_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recette_ingredient_item" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recette_instructions_de_preparation_dropdownButton"
                style="@style/recette_nombre_ingredients_manquants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/recette_dropdownbutton_notclicked_background"
                android:gravity="start|center_vertical"
                android:text="@string/recette_instrucion_de_preparation_dropdownButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recette_instruction_de_preparation_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recette_instruction_de_preparation_item" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recette_valeurs_nutritionnelles_dropdownButton"
                style="@style/recette_nombre_ingredients_manquants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/recette_dropdownbutton_notclicked_background"
                android:gravity="start|center_vertical"
                android:text="@string/recette_valeurs_nutritionnelles_dropdownButton" />

            <LinearLayout
                android:id="@+id/recette_valeurs_nutritionnelles_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="8dp">
...
