<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vert"
    tools:context=".recettes.RecettesRecommendeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_recettes_recommende"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_recettes_recommende"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/recette_title"
            app:menu="@menu/menu_profil" />

    </com.google.android.material.appbar.AppBarLayout>

    <android.widget.SearchView
        android:id="@+id/search_recettes_recommende"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/ellipse"
        android:layout_centerHorizontal="true"
        android:theme="@style/SearchViewStyle"
        android:queryHint="@string/chercherRecettesRecommende" />

    <LinearLayout
        android:layout_below="@+id/search_recettes_recommende"
        android:layout_above="@+id/androidx_window_recettes_recommende"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/buttonLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTous"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/recette_button_all"
                    android:textAppearance="@style/recette_button" />

                <Button
                    android:id="@+id/btnFavoris"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/recette_button_favoris"
                    android:textAppearance="@style/recette_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewFilter"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_filter_png" />

                <Button
                    android:id="@+id/btnFiltre"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/recette_button_filtre"
                    android:background="@android:color/transparent"
                    android:textAppearance="@style/recette_button" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="@style/CustomProgressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/ProgressBarColor"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grid_recettes_recommende"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/recette_recommende_item" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/androidx_window_recettes_recommende"
        android:layout_width="match_parent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/vertTexte"
        app:menu="@menu/menu_bottom_navigation" />
</RelativeLayout>
