<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vert"
    tools:context=".recettes.RecettesRecommendeFiltreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/appBar_recette">

        <androidx.appcompat.widget.Toolbar


            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/toolbar_back_buttonRe"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/fleche"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Filtre"
                android:textColor="@color/white"
                android:textSize="20sp" />




        </androidx.appcompat.widget.Toolbar>


        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

    </LinearLayout>


    <ScrollView
        android:layout_below="@+id/appBar_recette"
        android:layout_above="@+id/androidx_window_recette_recommende_filtre"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/regime_speciaux_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:text="@string/recette_recommende_filtre_regime_speciaux_header"
                android:textAlignment="textStart"
                android:textAppearance="@style/recette_similaires_header"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/regime_speciaux_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/regime_speciaux_button_item" />

            <TextView
                android:id="@+id/temps_de_preparation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:text="@string/recette_recommende_filtre_temps_de_preparation_header"
                android:textAlignment="textStart"
                android:textAppearance="@style/recette_similaires_header"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/temps_de_preparation_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="9"
                    android:max="240"
                    android:maxHeight="3dp"
                    android:progress="120"
                    android:progressDrawable="@drawable/progress"
                    android:thumb="@drawable/thumb"
                    android:thumbOffset="0dp"
                    android:thumbTintMode="add" />

                <TextView
                    android:id="@+id/temps_de_preparation_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/vertTexte"
                    android:text="120 min" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selectionner_produit_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="30dp"
                    android:text="@string/recette_recommende_filtre_select_produit_header"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/recette_similaires_header"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/recette_Button_add_produit"
                    android:background="@android:color/transparent"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="center"
                    android:padding="0dp"
                    android:textColor="@color/vertTexte"
                    android:textSize="30sp"
                    android:text="@string/recette_button_portion_plus" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/produits_selectionne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/ellipse"
                android:padding="5dp"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:alignItems="stretch"
                app:flexDirection="row"
                app:justifyContent="flex_start"
                tools:listitem="@layout/produit_selectionne_item" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/recette_recommende_filtre_annuler_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:textSize="20sp"
                    android:padding="0dp"
                    android:text="@string/recette_recommende_filtre_annuler_button" />

                <Button
                    android:id="@+id/recette_recommende_filtre_appliquer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:textSize="20sp"
                    android:padding="0dp"
                    android:text="@string/recette_recommende_filtre_appliquer_button" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:visibility="invisible"
        android:id="@+id/androidx_window_recette_recommende_filtre"
        android:layout_width="0dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/vertTexte"
        app:menu="@menu/menu_bottom_navigation" />

</RelativeLayout>